tests/snapshots/snapshot_tests__databases__child_database_embedded.snap
---
source: tests/snapshot_tests.rs
expression: render_one(&block)
---
🗄️ **Metrics**

*No data available.*
