tests/snapshots/snapshot_tests__databases__child_database_not_fetched.snap
---
source: tests/snapshot_tests.rs
expression: "render_one(&child_database(\"Key Highlights\"))"
---
🗄️ [[Key Highlights]]
